test: add tracking library tests and docs

--- a/frameworks/flutter/pubspec.yaml
+++ b/frameworks/flutter/pubspec.yaml
@@ -3,3 +3,5 @@ description: Track Einstore download and launch events from Flutter apps.
 version: 0.1.0
 environment:
   sdk: ">=2.18.0 <4.0.0"
+dev_dependencies:
+  test: ^1.25.2
