--- a/API/package.json
+++ b/API/package.json
@@ -33,6 +33,7 @@
     "dotenv": "^16.4.5",
     "fastify": "^4.29.0",
     "plist": "^3.1.0",
+    "sharp": "^0.34.5",
     "yauzl": "^2.10.0",
     "zod": "^3.23.8"
   },
