--- a/API/package.json
+++ b/API/package.json
@@ -9,6 +9,7 @@
     "do:build": "if [ -n \"$BILLING_DEPLOY_KEY\" ]; then mkdir -p ~/.ssh && echo \"$BILLING_DEPLOY_KEY\" > ~/.ssh/id_rsa && chmod 600 ~/.ssh/id_rsa && ssh-keyscan github.com >> ~/.ssh/known_hosts && mkdir -p ../Private && git clone git@github.com:Einstore/Billing.git ../Private/billing; fi && npm --prefix ../Libraries/rafiki-auth install && npm --prefix ../Libraries/rafiki-auth run build && rm -rf node_modules/@unlikeother/auth/dist && mkdir -p node_modules/@unlikeother/auth/dist && cp -R ../Libraries/rafiki-auth/dist/* node_modules/@unlikeother/auth/dist/ && npm --prefix ../Libraries/teams install && npm --prefix ../Libraries/teams run build && rm -rf node_modules/@rafiki270/teams/dist && mkdir -p node_modules/@rafiki270/teams/dist && cp -R ../Libraries/teams/dist/* node_modules/@rafiki270/teams/dist/ && npm run prisma:generate && npm run build",
     "start": "node dist/index.js",
     "test:unit": "node scripts/run-unit-tests.mjs",
+    "test:integration": "newman run ../postman_collection.json -e ../tests/newman/local.postman_environment.json --folder \"Upload Ingest (APK)\" --folder \"iOS Ingest\" --folder \"Store Upload (token query)\"",
     "postinstall": "npm run prisma:generate",
     "private:prepare": "node ./scripts/prepare-private.mjs",
     "prisma:generate": "npm run private:prepare && prisma generate --schema prisma/generated/schema.prisma",
@@ -41,6 +42,7 @@
     "@types/node": "^22.10.1",
     "@types/plist": "^3.0.5",
     "@types/yauzl": "^2.10.3",
+    "newman": "^6.2.1",
     "prisma": "^6.16.1",
     "tsx": "^4.19.2",
     "typescript": "^5.7.2",
