--- a/scripts/app-platform.env.example
+++ b/scripts/app-platform.env.example
@@ -1,7 +1,7 @@
 # Copy to scripts/app-platform.env and fill in secrets as needed.
 DATABASE_URL=postgresql://postgres@do-db:5432/einstore?schema=public
 NODE_ENV=production
-PORT=8080
+PORT=8100
 
 SPACES_ENDPOINT=https://lon1.digitaloceanspaces.com
 SPACES_REGION=lon1
@@ -20,7 +20,7 @@ AUTH_REFRESH_TTL_DAYS=30
 AUTH_ACCESS_TTL_MINUTES=15
 
 API_KEY_SECRET=changeme
-CORS_ORIGINS=https://admin.einstore.pro,https://einstore.pro,http://localhost:8081,http://localhost:5173
+CORS_ORIGINS=https://admin.einstore.pro,https://einstore.pro,http://localhost:8101
 
 ENABLE_SCHEMA_CREATE=false
 RUN_PRISMA_DEPLOY=false
