--- a/app.yaml
+++ b/app.yaml
@@ -40,7 +40,7 @@ ingress:
 jobs:
 - build_command: if [ -n "$BILLING_DEPLOY_KEY" ]; then mkdir -p ~/.ssh && echo "$BILLING_DEPLOY_KEY"
     > ~/.ssh/id_rsa && chmod 600 ~/.ssh/id_rsa && ssh-keyscan github.com >> ~/.ssh/known_hosts
-    && mkdir -p ../Private && git clone git@github.com:Einstore/Billing.git ../Private/billing;
+    && mkdir -p ../Private && rm -rf ../Private/billing && git clone git@github.com:Einstore/Billing.git ../Private/billing;
     fi && npm install
   environment_slug: node-js
   envs:
@@ -69,7 +69,7 @@ region: lon
 services:
 - build_command: if [ -n "$BILLING_DEPLOY_KEY" ]; then mkdir -p ~/.ssh && echo "$BILLING_DEPLOY_KEY"
     > ~/.ssh/id_rsa && chmod 600 ~/.ssh/id_rsa && ssh-keyscan github.com >> ~/.ssh/known_hosts
-    && mkdir -p ../Private && git clone git@github.com:Einstore/Billing.git ../Private/billing;
+    && mkdir -p ../Private && rm -rf ../Private/billing && git clone git@github.com:Einstore/Billing.git ../Private/billing;
     fi && npm --prefix ../Libraries/rafiki-auth install && npm --prefix ../Libraries/rafiki-auth
     run build && rm -rf node_modules/@unlikeother/auth/dist && mkdir -p node_modules/@unlikeother/auth/dist
     && cp -R ../Libraries/rafiki-auth/dist/* node_modules/@unlikeother/auth/dist/
@@ -163,7 +163,7 @@ static_sites:
   source_dir: /Web
 - build_command: if [ -n "$BILLING_DEPLOY_KEY" ]; then mkdir -p ~/.ssh && echo "$BILLING_DEPLOY_KEY"
     > ~/.ssh/id_rsa && chmod 600 ~/.ssh/id_rsa && ssh-keyscan github.com >> ~/.ssh/known_hosts
-    && mkdir -p ../Private && git clone git@github.com:Einstore/Billing.git ../Private/billing;
+    && mkdir -p ../Private && rm -rf ../Private/billing && git clone git@github.com:Einstore/Billing.git ../Private/billing;
     fi && npm install && npm run build
   catchall_document: index.html
   envs:
