--- a/docker-compose.app-platform.yml
+++ b/docker-compose.app-platform.yml
@@ -59,7 +59,7 @@ services:
       - ${APP_PLATFORM_ENV_FILE:-./scripts/app-platform.env}
     environment:
       BILLING_DEPLOY_KEY: ${BILLING_DEPLOY_KEY:-}
-    command: bash -lc "if [ -n \"$BILLING_DEPLOY_KEY\" ]; then mkdir -p ~/.ssh && echo \"$BILLING_DEPLOY_KEY\" > ~/.ssh/id_rsa && chmod 600 ~/.ssh/id_rsa && ssh-keyscan github.com >> ~/.ssh/known_hosts && mkdir -p ../Private && git clone git@github.com:Einstore/Billing.git ../Private/billing; fi && npm install && npm run build"
+    command: bash -lc "if [ -n \"$BILLING_DEPLOY_KEY\" ]; then mkdir -p ~/.ssh && echo \"$BILLING_DEPLOY_KEY\" > ~/.ssh/id_rsa && chmod 600 ~/.ssh/id_rsa && ssh-keyscan github.com >> ~/.ssh/known_hosts && mkdir -p ../Private && rm -rf ../Private/billing && git clone git@github.com:Einstore/Billing.git ../Private/billing; fi && npm install && npm run build"
     networks:
       - app-platform
 
