--- a/app.yaml
+++ b/app.yaml
@@ -38,10 +38,7 @@ ingress:
       path:
         prefix: /
 jobs:
-- build_command: if [ -n "$BILLING_DEPLOY_KEY" ]; then mkdir -p ~/.ssh && echo "$BILLING_DEPLOY_KEY"
-    > ~/.ssh/id_rsa && chmod 600 ~/.ssh/id_rsa && ssh-keyscan github.com >> ~/.ssh/known_hosts
-    && mkdir -p ../Private && rm -rf ../Private/billing && git clone git@github.com:Einstore/Billing.git ../Private/billing;
-    fi && npm install
+- build_command: bash ../scripts/clone-billing.sh && npm install
   environment_slug: node-js
   envs:
   - key: DATABASE_URL
@@ -67,10 +64,7 @@ jobs:
 name: einstore
 region: lon
 services:
-- build_command: if [ -n "$BILLING_DEPLOY_KEY" ]; then mkdir -p ~/.ssh && echo "$BILLING_DEPLOY_KEY"
-    > ~/.ssh/id_rsa && chmod 600 ~/.ssh/id_rsa && ssh-keyscan github.com >> ~/.ssh/known_hosts
-    && mkdir -p ../Private && rm -rf ../Private/billing && git clone git@github.com:Einstore/Billing.git ../Private/billing;
-    fi && npm --prefix ../Libraries/rafiki-auth install && npm --prefix ../Libraries/rafiki-auth
+- build_command: bash ../scripts/clone-billing.sh && npm --prefix ../Libraries/rafiki-auth install && npm --prefix ../Libraries/rafiki-auth
     run build && rm -rf node_modules/@unlikeother/auth/dist && mkdir -p node_modules/@unlikeother/auth/dist
     && cp -R ../Libraries/rafiki-auth/dist/* node_modules/@unlikeother/auth/dist/
     && npm --prefix ../Libraries/teams install && npm --prefix ../Libraries/teams
@@ -161,10 +155,7 @@ static_sites:
   name: web
   output_dir: .
   source_dir: /Web
-- build_command: if [ -n "$BILLING_DEPLOY_KEY" ]; then mkdir -p ~/.ssh && echo "$BILLING_DEPLOY_KEY"
-    > ~/.ssh/id_rsa && chmod 600 ~/.ssh/id_rsa && ssh-keyscan github.com >> ~/.ssh/known_hosts
-    && mkdir -p ../Private && rm -rf ../Private/billing && git clone git@github.com:Einstore/Billing.git ../Private/billing;
-    fi && npm install && npm run build
+- build_command: bash ../scripts/clone-billing.sh && npm install && npm run build
   catchall_document: index.html
   envs:
   - key: VITE_API_BASE_URL
