--- a/functions/ingest/packages/einstore/ingest/package.json
+++ b/functions/ingest/packages/einstore/ingest/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "type": "commonjs",
   "scripts": {
-    "test": "node tests/normalize-ios-icon.test.js"
+    "test": "node tests/normalize-ios-icon.test.js",
+    "start:local": "node server.js"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.758.0",
