--- a/functions/ingest/docker-compose.yml
+++ b/functions/ingest/docker-compose.yml
@@ -1,11 +1,17 @@
 services:
   ingest-function:
     build: ./packages/einstore/ingest
-    ports:
-      - "7071:8080"
     environment:
       SPACES_ENDPOINT: ${SPACES_ENDPOINT}
       SPACES_REGION: ${SPACES_REGION}
       SPACES_BUCKET: ${SPACES_BUCKET}
       SPACES_KEY: ${SPACES_KEY}
       SPACES_SECRET: ${SPACES_SECRET}
+  ingest-router:
+    image: nginx:alpine
+    depends_on:
+      - ingest-function
+    ports:
+      - "7071:8080"
+    volumes:
+      - ./nginx.conf:/etc/nginx/nginx.conf:ro
