--- a/functions/ingest/packages/einstore/ingest/package.json
+++ b/functions/ingest/packages/einstore/ingest/package.json
@@ -6,11 +6,13 @@
   "type": "commonjs",
   "scripts": {
     "test": "node tests/normalize-ios-icon.test.js",
-    "start:local": "node server.js"
+    "start:local": "node server.js",
+    "test:container": "node tests/container-ingest.test.js"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.758.0",
     "@devicefarmer/adbkit-apkreader": "^3.2.4",
+    "bplist-parser": "^0.3.2",
     "cgbi": "^1.0.2",
     "plist": "^3.1.0",
     "png-validator": "^2.0.0",
