--- a/functions/ingest/docker-compose.yml
+++ b/functions/ingest/docker-compose.yml
@@ -1,12 +1,42 @@
 services:
+  minio:
+    image: minio/minio:latest
+    command: server /data --console-address ":9001"
+    environment:
+      MINIO_ROOT_USER: ${MINIO_ROOT_USER:-minio}
+      MINIO_ROOT_PASSWORD: ${MINIO_ROOT_PASSWORD:-minio123}
+    ports:
+      - "9000:9000"
+      - "9001:9001"
+    volumes:
+      - minio-data:/data
+
+  minio-setup:
+    image: minio/mc:latest
+    depends_on:
+      - minio
+    environment:
+      MINIO_ROOT_USER: ${MINIO_ROOT_USER:-minio}
+      MINIO_ROOT_PASSWORD: ${MINIO_ROOT_PASSWORD:-minio123}
+      MINIO_BUCKET: ${SPACES_BUCKET:-einstore-local}
+    entrypoint: /bin/sh -c
+    command: >
+      mc alias set local http://minio:9000 "$MINIO_ROOT_USER" "$MINIO_ROOT_PASSWORD" &&
+      mc mb --ignore-existing "local/$MINIO_BUCKET"
+
   ingest-function:
     build: ./packages/einstore/ingest
     environment:
-      SPACES_ENDPOINT: ${SPACES_ENDPOINT}
-      SPACES_REGION: ${SPACES_REGION}
-      SPACES_BUCKET: ${SPACES_BUCKET}
-      SPACES_KEY: ${SPACES_KEY}
-      SPACES_SECRET: ${SPACES_SECRET}
+      SPACES_ENDPOINT: ${SPACES_ENDPOINT:-http://minio:9000}
+      SPACES_REGION: ${SPACES_REGION:-us-east-1}
+      SPACES_BUCKET: ${SPACES_BUCKET:-einstore-local}
+      SPACES_KEY: ${SPACES_KEY:-minio}
+      SPACES_SECRET: ${SPACES_SECRET:-minio123}
+      SPACES_FORCE_PATH_STYLE: "true"
+    depends_on:
+      - minio
+      - minio-setup
+
   ingest-router:
     image: nginx:alpine
     depends_on:
@@ -15,3 +45,6 @@ services:
       - "7071:8080"
     volumes:
       - ./nginx.conf:/etc/nginx/nginx.conf:ro
+
+volumes:
+  minio-data:
