--- a/.gitattributes
+++ b/.gitattributes
@@ -6,5 +6,7 @@ Admin/public/favicon.ico -filter -diff -merge -text
 Admin/public/favicon-16x16.png -filter -diff -merge -text
 Admin/public/favicon-32x32.png -filter -diff -merge -text
 Admin/public/favicon-48x48.png -filter -diff -merge -text
+Admin/public/android-chrome-192x192.png -filter -diff -merge -text
+Admin/public/android-chrome-512x512.png -filter -diff -merge -text
 Web/public/*.png filter=lfs diff=lfs merge=lfs -text
 Web/public/*.ico filter=lfs diff=lfs merge=lfs -text
